--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.40.1",
+		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
 		"eslint": "^8.28.0",
@@ -28,6 +28,7 @@
 	"type": "module",
 	"dependencies": {
 		"@picocss/pico": "^1.5.10",
-		"nanoid": "^5.0.1"
+		"nanoid": "^5.0.1",
+		"playwright": "^1.28.1"
 	}
 }
